# inox

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
enamel-core/: Cargo.toml
enamel-core/src/: lib.rs
enamel-core/src/database/: manager.rs  mod.rs  thread.rs
enamel-core/src/settings/: enamel.rs  mod.rs  notmuch.rs
enamel-core/tests/: main.rs
enamel-gtk/: Cargo.toml  build.rs
enamel-gtk/resources/: resources.xml  webext.capnp
enamel-gtk/resources/gtk/: headerbar.ui  main_window.ui  menus.ui
enamel-gtk/resources/html/: thread_view.scss
enamel-gtk/src/: app.rs  application_window.rs  constants.rs  controller.rs  headerbar.rs  macros.rs  main.rs  main_content.rs  main_window.rs  static_resource.rs  thread_list_cell_renderer.rs  uibuilder.rs
enamel-gtk/src/components/: mod.rs  tag_list.rs  thread_list.rs
enamel-gtk/src/components/thread_view/: mod.rs  page_client.rs  theme.rs
enamel-gtk/src/stacks/: content.rs  mod.rs
enamel-gtk/src/webextension/: lib.rs  protocol.rs  thread_view_webext.rs
enamel-gtk/src/widgets/: about_dialog.rs  aboutdialog.rs  mod.rs  tag_list.rs  thread_list.rs  thread_list_cell_renderer.rs  thread_view.rs  util.rs
enamel-tui/: Cargo.toml
enamel-tui/src/: app.rs  lazy_list_view.rs  list_view.rs  main.rs  thread_list.rs
enamel-tui/src/util/: event.rs  mod.rs
inox-core/: Cargo.toml
inox-core/src/: conversation_handler.rs  lib.rs  main.rs  util.rs
inox-core/src/convert/: internet_address.rs  message_helper.rs  message_transform.rs  mod.rs
inox-core/src/database/: manager.rs  message.rs  mod.rs  thread.rs
inox-core/src/handlers/: conversation_handler.rs  mail_handler.rs  message_handler.rs  mod.rs  query_handler.rs  state_metadata.rs  state_middleware.rs
inox-core/src/mime/: disposition_type.rs  mod.rs  multipart_subtype.rs
inox-core/src/models/: contact.rs  conversation.rs  message.rs  mod.rs  query.rs
inox-core/src/protocol/: conversation.rs  conversation_service.rs  mail_service.rs  message.rs  message_service.rs  mod.rs  query_service.rs
inox-core/src/settings/: inox.rs  mod.rs  notmuch.rs
inox-core/src/transform/: internet_address_list.rs
inox-core/tests/: main.rs
inox-gtk/: Cargo.toml  build.rs
inox-gtk/resources/: inox.css  resources.xml  webext.capnp
inox-gtk/resources/gtk/: conversation_list.ui  conversation_list_item.ui  conversation_view.ui  headerbar.ui  inox.css  main_window.ui  message_view.ui  placeholder_pane.ui  thread_list.ui  thread_list_item.ui  thread_row.ui  thread_view.ui  threads_list_item.ui
inox-gtk/resources/html/: conversation_view.scss  thread_view.html
inox-gtk/src/: app.rs  application.rs  constants.rs  header.rs  headerbar.rs  macros.rs  main.rs  main_content.rs  main_window.rs  settings.rs  static_resource.rs
inox-gtk/src/application/: application.rs  application_imp.rs  mod.rs
inox-gtk/src/components/: mod.rs  tag_list.rs  thread_list.rs
inox-gtk/src/components/thread_view/: mod.rs  page_client.rs  theme.rs
inox-gtk/src/core/: actions.rs  conversation_object.rs  database.rs  glib_rpc_client.rs  message.rs  mod.rs  thread.rs  util.rs
inox-gtk/src/core/mime/: content_disposition.rs  disposition_type.rs
inox-gtk/src/webextension/: channel.rs  connection.rs  glib_receiver_future.rs  lib.rs  message_view_web_ext.rs  mod.rs  protocol.rs  rpc.rs  server_utils.rs  service.rs  thread_view_webext.rs  web_view_extension.rs
inox-gtk/src/widgets/: about_dialog.rs  mod.rs  placeholder_pane.rs  thread_list.rs  thread_list_cell_renderer.rs  threads_list.rs  util.rs
inox-gtk/src/widgets/conversation_list/: conversation_list.rs  conversation_list_imp.rs  conversation_list_item.rs  conversation_list_item_imp.rs  conversation_list_oneline.rs  conversation_list_oneline_imp.rs  mod.rs
inox-gtk/src/widgets/conversation_view/: conversation_view.rs  conversation_view_imp.rs  mod.rs
inox-gtk/src/widgets/expander_row/: expander_row.rs  expander_row_imp.rs  mod.rs
inox-gtk/src/widgets/main_window/: main_window.rs  main_window_imp.rs  mod.rs
inox-gtk/src/widgets/message_list/: message_list.rs  message_list_imp.rs  mod.rs
inox-gtk/src/widgets/message_row/: base_row.rs  base_row_imp.rs  loading_row.rs  loading_row_imp.rs  message_row.rs  message_row_base.rs  message_row_base_imp.rs  message_row_imp.rs  mod.rs
inox-gtk/src/widgets/message_view/: contact_flow_box_child.rs  contact_flow_box_child_imp.rs  message_view.rs  message_view_imp.rs  mod.rs  page_client.rs  theme.rs
inox-gtk/src/widgets/message_web_view/: message_web_view.rs  message_web_view_imp.rs  mod.rs  page_client.rs  theme.rs
inox-gtk/src/widgets/messages_view/: messages_view.rs  messages_view_imp.rs  mod.rs
inox-gtk/src/widgets/placeholder_pane/: mod.rs  placeholder_pane.rs  placeholder_pane_imp.rs
inox-gtk/src/widgets/resize_leaflet/: gizmo.rs  gizmo_imp.rs  mod.rs  resize_leaflet.rs  resize_leaflet_imp.rs  resize_leaflet_page.rs  resize_leaflet_page_imp.rs  shadow_helper.rs  shadow_helper_imp.rs
inox-gtk/src/widgets/thread_list/: mod.rs  thread_list.rs  thread_list_imp.rs  thread_list_item.rs  thread_list_item_imp.rs
inox-gtk/src/widgets/thread_view/: loading_row.rs  message_partial_view.rs  message_row.rs  message_row_base.rs  message_view.rs  messages_view.rs  mod.rs  page_client.rs  theme.rs  thread_messages_view.rs  thread_view.rs  thread_view_imp.rs
inox-gtk/src/widgets/threads_list/: mod.rs  threads_list.rs  threads_list_imp.rs  threads_list_item.rs  threads_list_item_imp.rs  threads_list_oneline.rs  threads_list_oneline_imp.rs
inox-gtk/src/widgets/web_view/: message_web_view.rs  message_web_view_imp.rs  mod.rs  page_client.rs  theme.rs  web_view.rs  web_view_client.rs  web_view_client_imp.rs  web_view_imp.rs
inox-tui/: Cargo.toml
inox-tui/src/: app.rs  list_view.rs  main.rs  thread_list.rs
src/: application.rs  config.rs  main.rs
src/core/: config.rs  lib.rs
src/gtk/: application.rs  application_window.rs  cell_renderer.rs  constants.rs  header.rs  main.rs  main_content.rs  main_window.rs  main_window.ui  somewindow.ui  tag_list.rs  thread_list.rs  thread_view.rs  (+2 more)
(+8 files in other folders)
