[workspace]
members = [
    "enamel-core",
    "enamel-gtk",
    "enamel-tui"
]

[profile.release]
debug = false

[patch."https://github.com/gtk-rs/glib"]
glib = { git = "https://github.com/vhdirk/glib-rs", features=["futures", "subclassing"]}

[patch."https://github.com/gtk-rs/gio"]
gio = { git = "https://github.com/vhdirk/gio-rs", branch="subclassing", features=["futures", "subclassing"]}

[patch."https://github.com/gtk-rs/gtk"]
gtk = { git = "https://github.com/vhdirk/gtk-rs", branch="subclassing", features=["futures", "subclassing"]}

[patch."https://github.com/gtk-rs/webkit2gtk-rs"]
webkit2gtk = { git = "https://github.com/vhdirk/webkit2gtk-rs"}
