[package]
name = "enamel-core"
version = "0.0.1"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]

[lib]
name = "enamel_core"
path = "src/lib.rs"


[dependencies]
structopt = "0.2"
log = "*"
env_logger ="*"
shellexpand = "*"
net2 = "*"
nix = "*"
regex = "*"
toml = "*"
serde = "*"
serde_derive = "*"
serde_ini = "*"
lazy_static = "1.0"
vte = "0.3.2"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.3.7"
notmuch = "*"

gio = { git = "https://github.com/gtk-rs/gio", features=["futures"]}
glib = { git = "https://github.com/gtk-rs/glib"}
glib-sys = { git = "https://github.com/gtk-rs/sys"}
gio-sys = { git = "https://github.com/gtk-rs/sys"}
gobject-sys = { git = "https://github.com/gtk-rs/sys"}

gmime = { git = "https://github.com/vhdirk/gmime-rs"}


[features]
default = ["glib/futures",
           "gio/futures"]


[patch.crates-io]
notmuch = { path = "../../notmuch-rs" }
gmime = { path = "../../gmime-rs" }


[dev-dependencies]
cargo-expand = "*"
