[package]
name = "enamel-gtk"
version = "0.0.1"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
build = "build.rs"
workspace = "../"


[[bin]]
name = "enamel-gtk"
path = "src/main.rs"


[dependencies]
structopt = "0.2"
log = "*"
env_logger ="*"
shellexpand = "*"
net2 = "*"
nix = "*"
regex = "*"
toml = "*"
serde = "*"
serde_derive = "*"
serde_ini = "*"
lazy_static = "1.0"
vte = "0.3.2"
chrono = { version = "0.4", features = ["serde"] }

gtk = { git = "https://github.com/gtk-rs/gtk" }
cairo-rs = { git = "https://github.com/gtk-rs/cairo" }
pango = { git = "https://github.com/gtk-rs/pango" }
gdk = { git = "https://github.com/gtk-rs/gdk" }
gdk-pixbuf = { git = "https://github.com/gtk-rs/gdk-pixbuf" }
gio = { git = "https://github.com/gtk-rs/gio", features=["futures"]}
glib = { git = "https://github.com/gtk-rs/glib" }
pangocairo = { git = "https://github.com/gtk-rs/pangocairo" }
glib-sys = { git = "https://github.com/gtk-rs/sys" }
gio-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
gtk-sys = { git = "https://github.com/gtk-rs/sys" }
gdk-sys = { git = "https://github.com/gtk-rs/sys" }
gdk-pixbuf-sys = { git = "https://github.com/gtk-rs/sys" }
cairo-sys-rs = { git = "https://github.com/gtk-rs/cairo" }
# webkit2gtk    = { git = "https://github.com/gtk-rs/webkit2gtk-rs" }
# webkit2gtk-webextension = { git = "https://github.com/gtk-rs/webkit2gtk-webextension-rs" }

gobject-subclass = { git = "https://github.com/sdroege/gobject-subclass" }
gio-subclass = { git = "https://github.com/sdroege/gobject-subclass" }
gtk-subclass = { git = "https://github.com/sdroege/gtk-subclass" }

crossbeam-channel = "0.2.1"
rayon = "1.0.1"
send-cell = "0.1.3"
failure = "0.1.1"
failure_derive = "0.1.1"
md5 = "0.3.7"

enamel-core = { path = "../enamel-core" }
notmuch = "*"
gmime = { git = "https://github.com/vhdirk/gmime-rs"}


[features]
default = ["gtk/v3_16",
           #"webkit2gtk/v2_16",
           "glib/futures",
           "gio/futures"]

[dev-dependencies]
cargo-expand = "*"
pretty_assertions = "0.5.1"
