[package]
name = "enamel-gtk"
version = "0.0.1"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
build = "build.rs"
workspace = "../"
default-run = "enamel-gtk"
edition = "2018"

[[bin]]
name = "enamel-gtk"
path = "src/main.rs"

[lib]
path = "src/webextension/lib.rs"
name = "enamel_gtk_webext"
crate-type = ["cdylib"]

[dependencies]
structopt = "0.2"
log = "*"
env_logger ="*"
shellexpand = "*"
net2 = "*"
nix = "*"
regex = "*"
toml = "*"
serde = "*"
serde_derive = "*"
serde_ini = "*"
lazy_static = "1.0"
vte = "0.3.2"
supercow = "0.1.0"
dirs = "1.0.4"
ipc-channel = "0.11.2"
bincode = "1.0.1"
bytes = { version = "0.4.12", features = ["serde"] }
uuid = { version = "0.7", features = ["v4"] }
fragile = "0.3.0"
futures-preview = "0.3.0-alpha"


chrono = { version = "0.4", features = ["serde"] }

gtk = { git = "https://github.com/vhdirk/gtk-rs", branch="subclassing", features=["v3_16", "futures"]}
cairo-rs = { git = "https://github.com/gtk-rs/cairo" }
pango = { git = "https://github.com/gtk-rs/pango" }
gdk = { git = "https://github.com/gtk-rs/gdk" }
gdk-pixbuf = { git = "https://github.com/gtk-rs/gdk-pixbuf" }
gio = { git = "https://github.com/gtk-rs/gio", features=["futures"]}
glib = { git = "https://github.com/gtk-rs/glib", features=["futures"] }
pangocairo = { git = "https://github.com/gtk-rs/pangocairo" }
glib-sys = { git = "https://github.com/gtk-rs/sys" }
gio-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
gtk-sys = { git = "https://github.com/gtk-rs/sys" }
gdk-sys = { git = "https://github.com/gtk-rs/sys" }
gdk-pixbuf-sys = { git = "https://github.com/gtk-rs/sys" }
cairo-sys-rs = { git = "https://github.com/gtk-rs/cairo" }
webkit2gtk = { git = "https://github.com/vhdirk/webkit2gtk-rs", features=["v2_18"] }
webkit2gtk-webextension = { git = "https://github.com/vhdirk/webkit2gtk-webextension-rs", features=["v2_18"] }

capnp = { git="https://github.com/capnproto/capnproto-rust.git", branch="std-future"}
capnp-rpc = { git="https://github.com/capnproto/capnproto-rust.git", branch="std-future"}

crossbeam-channel = "0.2.1"
rayon = "1.0.1"
send-cell = "0.1.3"
failure = "0.1.1"
failure_derive = "0.1.1"
md5 = "0.3.7"

enamel-core = { path = "../enamel-core" }

relm = { git = "https://github.com/vhdirk/relm" }
relm-derive = { git = "https://github.com/vhdirk/relm" }

notmuch = "*"
gmime = { git = "https://github.com/vhdirk/gmime-rs"}

# [patch.crates-io]
#notmuch = { path = "../../notmuch-rs" }
#gmime = { path = "../../gmime-rs" }
async-std = "0.99.5"


[features]
default = ["gtk/v3_16"]

[dev-dependencies]
cargo-expand = "*"
pretty_assertions = "0.5.1"

[build-dependencies]
capnpc = { git="https://github.com/capnproto/capnproto-rust.git", branch="std-future"}
