[package]
name = "inox-core"
version = "0.0.1"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
edition = "2018"

[lib]
name = "inox_core"
path = "src/lib.rs"

[[bin]]
name = "inox_core"
path = "src/main.rs"


[dependencies]
structopt = "0.3.25"
paw = "1.0"
log = "*"
env_logger ="*"
shellexpand = "*"
net2 = "*"
nix = "*"
regex = "*"
toml = "*"
serde = "*"
serde_derive = "*"
serde_ini = "*"
lazy_static = "1.0"
once_cell = "*"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.3.7"
dirs = "1.0"
pretty_env_logger = "0.4.0"
futures = "^0.3.18"
async-std = "*"
async-trait = "*"
strum = { version = "0.23", features = ["derive"] }

jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-tcp-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-server-utils = "18.0.0"

notmuch = "0.7.0"
gmime = { git = "https://gitlab.gnome.org/World/Rust/gmime-rs"}

[dev-dependencies]
cargo-expand = "*"


[[test]]
name = "main"
harness = false

