[package]
name = "inox-gtk"
version = "0.0.1"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
build = "build.rs"
workspace = "../"
default-run = "inox-gtk"
edition = "2018"

[[bin]]
name = "inox-gtk"
path = "src/main.rs"

[lib]
path = "src/webextension/lib.rs"
name = "inox_gtk_webext"
crate-type = ["cdylib"]

[dependencies]
structopt = "0.2"
log = "*"
env_logger ="*"
pretty_env_logger = "0.4.0"
shellexpand = "*"
net2 = "*"
libc = "*"
nix = "*"
regex = "*"
toml = "*"
serde = "*"
serde_derive = "*"
serde_ini = "*"
lazy_static = "1.0"
# vte = "0.3.2"
dirs = "1.0.4"
bincode = "1.0.1"
bytes = { version = "0.4.12", features = ["serde"] }
uuid = { version = "0.7", features = ["v4"] }
fragile = "0.3.0"
futures = "0.3"
async-std = "*"
once_cell = "1.2.0"


chrono = { version = "0.4", features = ["serde"] }

gtk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4"}
gtk-macros = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4-macros"}
gtk-sys = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4-sys"}
gdk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gdk4" }
gdk-sys = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gdk4-sys"}
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gobject-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gio-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core" }
cairo-sys-rs = { git = "https://github.com/gtk-rs/gtk-rs-core" }
pango = { git = "https://github.com/gtk-rs/gtk-rs-core" }
pangocairo = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gdk-pixbuf = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gdk-pixbuf-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }
webkit2gtk = { git = "https://gitlab.gnome.org/World/Rust/webkit2gtk5-rs", features=["v2_18"], package = "webkit2gtk5" }
webkit2gtk-webextension = { git = "https://gitlab.gnome.org/World/Rust/webkit2gtk5-rs", features=["v2_18"], package = "webkit2gtk5-webextension" }
adw = { path = "../../libadwaita-rs/libadwaita", package = "libadwaita" }

capnp = "0.12"
capnp-rpc = "0.12"
capnp-futures = "0.12"

rand = "0.7"
crossbeam-channel = "0.2.1"
rayon = "1.0.1"
send-cell = "0.1.3"
failure = "0.1.1"
failure_derive = "0.1.1"
md5 = "0.3.7"

notmuch = "*"
gmime = { git = "https://gitlab.gnome.org/World/Rust/gmime-rs"}

inox-core = { path = "../inox-core" }


# [features]
# default = ["gtk/v3_24"]

[dev-dependencies]
cargo-expand = "*"
pretty_assertions = "0.5.1"

[build-dependencies]
capnpc = "0.12"
